--- a/Project/WebContent/css/bootstrap.css
+++ b/Project/WebContent/css/bootstrap.css
@@ -1567,7 +1567,7 @@ pre code {
 .table th,
 .table td {
   padding: 0.75rem;
-  vertical-align: top;
+  vertical-align: middle;
   border-top: 1px solid #e9ecef;
 }
 
